--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+    "name": "myapp",
+    "description": "a really cool app",
+    "version": "1.0.0",
+    "engines": {
+        "node": "14.15.4"
+    },
     "private": true,
     "scripts": {
         "dev": "npm run development",
