--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
         "prod": "npm run production",
         "production": "mix --production",
         "start": "cd resources/frontend && npm run start",
-        "build": "react-scripts build",
+        "build": "npm run prod",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "postinstall": "npm run prod"
+        "eject": "react-scripts eject"
     },
     "dependencies": {
         "@babel/preset-react": "^7.13.13",
