--- a/package.json
+++ b/package.json
@@ -21,26 +21,27 @@
     },
     "dependencies": {
         "@babel/preset-react": "^7.13.13",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "animate.css": "^4.1.1",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.1.0",
+        "bulma": "^0.9.3",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^4.0.0",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "@fortawesome/fontawesome-free": "^5.15.4",
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^12.1.10",
-        "axios": "^0.21.1",
-        "bootstrap": "^5.1.0",
-        "bulma": "^0.9.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "reactstrap": "^8.9.0",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "web-vitals": "^1.0.1"
     },
     "proxy": "http://localhost:8000/"
