--- a/package.json
+++ b/package.json
@@ -1,62 +1,67 @@
 {
-  "name": "superfaktura",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@babel/preset-react": "^7.13.13",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "animate.css": "^4.1.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.1.0",
-    "bulma": "^0.9.3",
-    "jquery": "^3.6",
-    "laravel-mix": "^6.0.6",
-    "lodash": "^4.17.19",
-    "popper.js": "^1.16.1",
-    "postcss": "^8.1.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-onclickoutside": "^6.11.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "reactstrap": "^8.9.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.50.0"
-  },
-  "scripts": {
-    "start": "cd resources/frontend && npm run start",
-    "build": "npm run prod",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prod": "npm run production",
-    "production": "mix --production"
-  },
-  "proxy": "http://localhost:8000/",
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {}
+    "name": "superfaktura",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@babel/preset-react": "^7.13.13",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@reduxjs/toolkit": "^1.6.1",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "animate.css": "^4.1.1",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.1.0",
+        "bulma": "^0.9.3",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.6",
+        "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-onclickoutside": "^6.11.2",
+        "react-redux": "^7.2.4",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.3",
+        "reactstrap": "^8.9.0",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "web-vitals": "^1.0.1",
+        "webpack": "^5.50.0"
+    },
+    "scripts": {
+        "start": "cd resources/frontend && npm run start",
+        "build": "npm run prod",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "prod": "npm run production",
+        "production": "mix --production"
+    },
+    "proxy": "http://localhost:8000/",
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest",
+            "eslint:recommended",
+            "plugin:react/recommended"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "eslint": "^7.32.0",
+        "eslint-plugin-react": "^7.24.0"
+    }
 }
