--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "react": "^17.0.2",
+        "react-datepicker": "^4.2.1",
         "react-dom": "^17.0.2",
         "react-onclickoutside": "^6.11.2",
         "react-redux": "^7.2.4",
