--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-select-search": "^3.0.8",
         "reactstrap": "^8.9.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
